# S24-CS124

./: .gitignore  Makefile  README.md  deploy.sh  randmst  strassen  texw.sh
perf/: diffs.md
progset1/: .gitignore  Cargo.toml  README.md
progset1/file_io/: config.json  d0_min200k.csv  debug_config.json  debug_results.csv  heaviest_edge.csv  just_0d.json  results.csv
progset1/perf/: diffs.md
progset1/src/: cli.rs  decimal.rs  error.rs  float_factory.rs  graph_gen.rs  heap.rs  lib.rs  main.rs  mst.rs  prim_heap.rs
progset1/src/test_data/: mod.rs  rng_weighted.json
progset2/: .gitignore  Cargo.toml  Makefile  README.md  ]  dbg.py  diff_test.sh  progset2.excalidraw  strassen
progset2/experiments/: tri_expr.json  tri_results.csv
progset2/results/: base_expr.json  base_results.csv  estimate_convergence.py
progset2/src/: error.rs  lib.rs  main.rs  matrix.rs
progset2/src/mtx/: cli.rs  experiments.rs  matrix.rs  mod.rs  padding.rs  slice_matrix.rs
progset2/src/test_data/: 176x175.json  255x256.json  (+7 more)
ps1/: Cargo.toml  ps1.aux  ps1.tex  timing_results.txt
ps1/src/: benchmarks.rs  fib.rs  lib.rs  main.rs  matrix.rs
ps2/: CS 124_ PS2.excalidraw  ps2.aux  ps2.tex  q3.py  scratch_work.excalidraw
ps3/: ps3.aux  ps3.tex
ps4/: Cargo.toml  ps4.excalidraw  ps4.tex
ps4/src/: lib.rs  main.rs
ps4/test_data/: bee.txt  q3b.txt  yes.txt
results/: tri_expr.json
src/: cli.rs  error.rs  lib.rs  main.rs  mst.rs  prim_heap.rs
src/mtx/: cli.rs  mod.rs
src/test_data/: 8x8.json  gen_json.py  gen_raw.py  gen_wt_nums.py  mod.rs  raw_8x8.txt  rng_isize_1k.json
