[package]
name = "progset1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
rand = "0.8.5"

[dev-dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
